edit logic, rename BotLogic and create class KeyboardService